# gobjfs

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.md  TODO.txt
benchmark/: 10ssd_scsiMount.sh  24ssd_scsiMount.sh  BenchIOExecFile.cpp  BenchIORaw.cpp  BenchObjectFSRW.cpp  BenchObjectFSWriter.cpp  CMakeLists.txt  DummyClient.cpp  DummyServer.cpp  README.md  benchObjectFSWriter.conf  benchioexec.conf  ioexecbench.sh  nvmeMount.sh  objfsbench.sh  rawioexec.conf  run-write-benchmarks.sh
benchmark/bip_deque/: CMakeLists.txt  ShmemClient.cpp  ShmemQueue.h  ShmemServer.cpp
benchmark/networkxio/: BenchNetClient.cpp  BenchNetServer.cpp  CMakeLists.txt  TestDataFileGenerator.py  bench_net_client.conf  bench_net_server.conf  netbench.sh
benchmark/rora/: CMakeLists.txt  EdgeProcess.cpp  RoraGateway.cpp  bench.sh  edge_process.conf  rora_gateway.conf  sum_bench_iops.sh
benchmark/shmq/: CMakeLists.txt  ShmemClient.cpp  ShmemServer.cpp
config/: FindFileRegionsInBufferCache.txt  MellanoxRDMA.txt  NVME_RawBlockDevicePermissions.txt  NVME_SSD_Query  SharedMemory.txt  disk_trace  glog_config.txt  tuning.sh
doc/Alba/: OCaml_to_C  alba_architecture.txt  integration_lwt.html
doc/bench03May/: BenchNumbers.xlsx  README  benchObjectFSWriter.conf  noopenclose_ioexecfile.out  with5percwrites_ioexecfile.out
doc/bench19May/: README.txt  many_ssd_ioexecfile.xlsx
doc/bench19May/10SSD_config/: 1_1000_only_nvme_nosync.csv  1_1000_only_nvme_sync.csv  1_1000_only_sata_nosync.ioexecfile.out  1_1000_only_sata_sync.ioexecfile.out  1_2000_only_nvme_nosync.csv  1_2000_only_sata_nosync.csv  1_2000_with_nvme.benchioexec.conf  separate_nvme.ioexecfile.csv
doc/bench19May/22SSD_config/: benchioexec.conf  scsiMount.sh  scsiTune.sh
doc/benchmark/feb1_2017/: README.txt  bench_net_server.conf  dmesg.out  edge_process.conf  lshw.out  nvme.out  rora_gateway.conf  sysctl.out  uname.out
doc/benchmark/may03_2016/: benchioexec.conf  gioexecfile.conf.bak  withopenclose_ioexecfile.out
doc/benchmark/may19_2016/10SSD_config/: 1_2000_only_nvme_pureread.csv  1_2000_only_nvme_sync.csv  1_2000_with_nvme.ioexecfile.csv  1_200_only_sata_sync.ioexecfile.out  README.txt  benchioexec.conf  only_sata_pureread.ioexecfile.out  separate_sata.ioexecfile.csv
doc/benchmark/may19_2016/22SSD_config/: gioexecfile.conf.bak  sync.ioexecfile.out
doc/benchmark/rora/packet_net/: README.txt  bench_net_server.conf  edge_process.conf  rora_gateway.conf
doc/ioexec/: IOExec.docx  nonAlignedIO.txt
doc/ssd_parallelism_benchmark/: README.txt  SSD_parallelism.xlsx
examples/: CMakeLists.txt
examples/networkxio/: AsyncClient.cpp  CMakeLists.txt  MultiAsyncClient.cpp  NetworkServer.cpp  SyncClient.cpp  gioexecfile.conf  newC
examples/rocksdb/: README.txt  read_example.cc  write_example.cc
examples/rora/: CMakeLists.txt  EdgeClient.cpp  RoraGateway.cpp  SampleRoraGateway.cpp  rora_gateway.conf
include/: TestObjectFS_MT1.h  gIOExecFile.h  gMempool.h  gcommon.h  gobjfs_client.h  gobjfs_log.h  gobjfs_server.h
lib/: libxio.so.0
src/: CMakeLists.txt  Executor.h  FileDistributor.cpp  FileDistributor.h  FilerJob.cpp  FilerJob.h  IOExecutor.cpp  IOExecutor.h  Mempool.cpp  Mempool.h  Queueable.h  gIOExecFile.cpp  gMempool.cpp  gcommon.cpp  gioexecfile.conf  gparse.cpp  gparse.h  user_io_getevents.h
src/networkxio/: AsyncClient.cpp  CMakeLists.txt  MultiAsyncClient.cpp  NetworkClient.cpp  NetworkServer.cpp  NetworkServerTest.cpp  NetworkXioClient.cpp  NetworkXioClient.h  NetworkXioClientData.h  NetworkXioCommon.cpp  NetworkXioCommon.h  NetworkXioHandler.h  NetworkXioIOHandler.cpp  NetworkXioIOHandler.h  NetworkXioInterface.cpp  NetworkXioInterface.h  NetworkXioMsg.h  NetworkXioProtocol.h  NetworkXioRequest.h  NetworkXioServer.cpp  NetworkXioServer.h  NetworkXioWork.h  NetworkXioWorkQueue.h  PortalThreadData.cpp  PortalThreadData.h  README.txt  REMOVE_LATER_Makefile  SemaphoreWrapper.cpp  SemaphoreWrapper.h  SyncClient.cpp  common.h  context.h  gobjfs_client.cpp  gobjfs_client_common.h  gobjfs_config.h  gobjfs_getenv.h  gobjfs_server.cpp  libovsvolumedriver.cpp  volumedriver.cpp  volumedriver.h
src/networkxio/test/: CMakeLists.txt  TestCompileByC.c  TestGetenv.cpp  TestMain.cpp  TestMultipleServers.cpp  TestNetworkServer.cpp  TestStats.cpp
src/rora/: ASDQueue.cpp  ASDQueue.h  AdminMsg.cpp  AdminMsg.h  AdminQueue.cpp  AdminQueue.h  CMakeLists.txt  EdgeQueue.cpp  EdgeQueue.h  GatewayClient.cpp  GatewayClient.h  GatewayProtocol.cpp  GatewayProtocol.h  RoraGateway.cpp  RoraGateway.h
src/rora/test/: CMakeLists.txt  TestEdgeQueue.cpp  TestGatewayProtocol.cpp  TestMain.cpp
src/test/: CMakeLists.txt  MempoolTest.cpp  TestIOExec.cpp  TestIOExecAPI.cpp  TestIOExecFile.cpp  TestMain.cpp  TestNonAligned.cpp  TestObjectFS.conf  TestObjectFS.cpp  TestObjectFS_MT.cpp  TestObjectFS_MT1.cpp
src/util/: CpuStats.cpp  CpuStats.h  EPoller.cpp  EPoller.h  EventFD.cpp  EventFD.h  Pipe.h  SemaphoreWrapper.cpp  SemaphoreWrapper.h  ShutdownNotifier.cpp  ShutdownNotifier.h  Spinlock.h  Stats.h  Timer.h  TimerNotifier.cpp  TimerNotifier.h  os_utils.cpp  os_utils.h
src/util/test/: CMakeLists.txt  EPollerTest.cpp  EventFDTest.cpp  OSUtilsTest.cpp  SemaphoreWrapperTest.cpp  ShutdownNotifierTest.cpp  StatsTest.cpp  TestMain.cpp
util/: CMakeLists.txt  ConditionWrapper.h  CpuStats.cpp  SemaphoreWrapper.cpp  SemaphoreWrapper.h  ShutdownNotifier.cpp  ShutdownNotifier.h  Stats.h  lang_utils.h  os_utils.h
util/test/: CMakeLists.txt  OSUtilsTest.cpp  SemaphoreWrapperTest.cpp  ShutdownNotifierTest.cpp  StatsTest.cpp  TestMain.cpp
